# home-kubernetes

./: .gitignore  CLAUDE.md  README.md  renovate.json5
.github/workflows/: build-kotatsu-news.yaml
argocd/: root.yaml
argocd/root/templates/: root.yaml
docs/: design-philosophy.md
manifests/applications/: argocd-image-updater.yaml  cloudflared.yaml  dify.yaml  grafana.yaml  harbor.yaml  kotatsu-news.yaml  kube-prometheus-stack.yaml  local-storage.yaml  n8n.yaml  obsidian-livesync.yaml  prometheus.yaml  root.yaml  sealed-secrets.yaml
manifests/cloudflared/: deployment.yaml  secret.yaml
manifests/dify/: Chart.yaml  values.yaml
manifests/kotatsu-news/: cronjob.yaml  sealedsecret.yaml
manifests/local-storage/: Chart.yaml  persistent-volume.yaml
manifests/n8n/: Chart.yaml  n8n-deployment.yaml  n8n-pvc.yaml  n8n-sealed-secret.yaml  n8n-service.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-sealed-secret.yaml  postgres-service.yaml  values.yaml
manifests/obsidian-livesync/: Chart.yaml  values.yaml
src/kotatsu-news/: .mise.toml  Dockerfile  README.md  pyproject.toml
src/kotatsu-news/src/: anniversary.py  main.py  weather.py
src/kotatsu-news/tests/: test_anniversary.py
